--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
+    "@types/react-responsive": "^8.0.8",
     "antd": "^5.24.2",
     "antd-style": "^3.7.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-responsive": "^10.0.1",
     "react-router": "^7.2.0"
   },
   "devDependencies": {
